# MyClaw

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: two_phase_comparison.html
entry/: cli.py  main.py  monitor.py
examples/: basic_usage.py
myclaw/core/: agent.py  bus.py  config.py  context.py  embedding_provider.py  embedding_store.py  heartbeat.py  logger.py  prompt_loader.py  provider.py  session.py  skill_loader.py
myclaw/core/prompts/: custom.md  default.md  friendly.md  professional.md
myclaw/core/tools/: base.py  builtins.py  sandbox_tools.py
tests/: test_agent.py  test_builtins.py  test_config_and_skill_loader.py  test_context_advanced.py  test_deadlock_prevention.py  test_heartbeat.py  test_knowledge.py  test_sandbox_tools.py  test_two_phase_skills.py
tests/test_result/: test_two_phase_skills.txt
workspace/: sessions.json
