[project]
name = "myclaw"
version = "1.0.0"
description = "下一代透明智能体架构 - Next-Gen Transparent Agent Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ttguy0707", email = "thor07@126.com" }]

dependencies = [
    # CLI 交互
    "typer>=0.9.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    # 环境配置
    "python-dotenv>=1.0.0",
    # LangChain 生态
    "langchain_core>=0.2.0",
    "langgraph>=0.1.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.2.0",
    # LLM 提供商 SDK
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    # 数据存储
    "aiosqlite>=0.19.0",
    # 工具支持
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
myclaw = "entry.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
